# MEDAS-Financial-Reporting

./: .coverage  .dockerignore  .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  todo.html  todo.md
.github/workflows/: ci.yaml  docker.yaml
notebooks/: notebook.html  notebook.ipynb
pages/: 01-introduction.html  01-introduction.qmd  02-situation-de-depart.html  02-situation-de-depart.qmd  03-situation-cible.html  03-situation-cible.qmd  04-planification.html  04-planification.qmd  05-le-code.html  05-le-code.qmd  06-tests.html  06-tests.qmd  07-integration-continue.html  07-integration-continue.qmd  08-streamlit.html  08-streamlit.qmd  09-docker-argocd.html  09-docker.html  09-docker.qmd  10-argocd.html  10-argocd.qmd  11-conclusion.html  11-conclusion.qmd
site_libs/bootstrap/: bootstrap-4c901ed1689e54aac3db7d042a167e77.min.css  bootstrap-dark-f8f57b09e4415e0d916b6d312d11cd48.min.css
src/MEDAS-Financial-Reporting/: config.py
src/medas_financial_reporting/: __init__.py  config.py  storage.py
src/medas_financial_reporting/financial_reporting/: __init__.py  data.py  main.py  reporting.py
src/medas_financial_reporting/streamlit_app/: app.py
tests/: test_data.py  test_e2e.py  test_integration.py  test_reporting.py
