[project]
name = "medas_financial_reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl==3.1.3",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "s3fs>=2026.3.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"
