[project]
name = "medas_financial_reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl==3.1.3",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
    "pyarrow>=24.0.0",
    "s3fs>=2026.3.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
reporting = "medas_financial_reporting.financial_reporting.main:main"

[tool.coverage.run]
omit = [
    "src/medas_financial_reporting/financial_reporting/main.py",
    "src/medas_financial_reporting/storage.py"
]

[tool.pytest.ini_options]
markers = [
    "unit: tests unitaires",
    "integration: tests intégration",
]